完善例子程序